[gd_scene load_steps=4 format=3 uid="uid://bmesvyu2rfr7b"]

[ext_resource type="Script" path="res://Scripts/tests/reparent_node.gd" id="1_pt3y4"]
[ext_resource type="Texture2D" uid="uid://bnb3rihxt3byc" path="res://Scenes/tests/right arrow.png" id="2_83wo1"]
[ext_resource type="Texture2D" uid="uid://7yokx7v37js3" path="res://Scenes/tests/left arrow.png" id="3_fft2y"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pt3y4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Parent1" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="reparent1" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_83wo1")

[node name="reparent2" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_fft2y")

[node name="Parent2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/VBoxContainer/reparent1" to="." method="_on_reparent_1_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/reparent2" to="." method="_on_reparent_2_pressed"]
